# crtp

./: CMakeLists.txt  LICENSE  README.md
include/: AddFunctionality.h  SimpleExample.h  simpleExample.h
source/: AddFunctionality.cpp  simpleExample.cpp
